--- a/design.ui
+++ b/design.ui
@@ -30,7 +30,7 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <layout class="QHBoxLayout" name="_2">
         <item>
          <widget class="QLabel" name="feed_label">
           <property name="sizePolicy">
@@ -38,6 +38,12 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>500</height>
+           </size>
           </property>
           <property name="text">
            <string>Image 1</string>
@@ -55,6 +61,12 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>500</height>
+           </size>
+          </property>
           <property name="text">
            <string>Image 2</string>
           </property>
@@ -68,10 +80,22 @@
       <item>
        <widget class="QLabel" name="instruction_label">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
+         <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>1026</width>
+          <height>100</height>
+         </size>
         </property>
         <property name="font">
          <font>
